# AI-Learning-Recommender-Agent

./: README.md
adaptive_learning/: .gitignore  README.md  gen-lang-client-0627056286-c0e72ab2ecef.json  pyproject.toml
adaptive_learning/adaptive_learning/: report.md
adaptive_learning/knowledge/: user_preference.txt
adaptive_learning/logs/: conversation_log.txt
adaptive_learning/resources/: reponse.json  response.json
adaptive_learning/src/adaptive_learning/: crew.py  main.py
adaptive_learning/src/adaptive_learning/config/: agents.yaml  tasks.yaml
adaptive_learning/src/adaptive_learning/tools/: custom_tool.py
