[project]
name = "adaptive_learning"
version = "0.1.0"
description = "adaptive_learning using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
adaptive_learning = "adaptive_learning.main:run"
run_crew = "adaptive_learning.main:run"
train = "adaptive_learning.main:train"
replay = "adaptive_learning.main:replay"
test = "adaptive_learning.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
